Source/WebCore/inspector/InspectorTimelineAgent.cpp
@@ -257,11 +257,7 @@ void InspectorTimelineAgent::startFromConsole(JSC::ExecState* exec, const String
     if (!m_enabled && m_pendingConsoleProfileRecords.isEmpty())
         internalStart();
 
-    // Use an independent stopwatch for console-initiated profiling, since the user will expect it
-    // to be relative to when their command was issued.
-    Ref<Stopwatch> profilerStopwatch = Stopwatch::create();
-    profilerStopwatch->start();
-    startProfiling(exec, title, WTF::move(profilerStopwatch));
+    startProfiling(exec, title, m_instrumentingAgents->inspectorEnvironment().executionStopwatch());
 
     m_pendingConsoleProfileRecords.append(createRecordEntry(TimelineRecordFactory::createConsoleProfileData(title), TimelineRecordType::ConsoleProfile, true, frameFromExecState(exec)));
 }
